fix(view mode): fix overlapped text on small viewport

--- a/src/styles/components/card/_card.scss
+++ b/src/styles/components/card/_card.scss
@@ -6,10 +6,10 @@
   &__title {
     padding-bottom: 3rem;
     font-size: 1.2rem;
-    font-weight: 700;
+    font-weight: 600;
     color: $color-primary;
     text-transform: uppercase;
-    letter-spacing: 3px;
+    letter-spacing: 5px;
   }
 }
 
