--- a/src/styles/components/featured-properties/_featured-properties.scss
+++ b/src/styles/components/featured-properties/_featured-properties.scss
@@ -7,13 +7,31 @@
 .featured-properties-nav {
   position: absolute;
   top: 0;
-  right: 20rem;
+  right: 18rem;
   display: flex;
   justify-content: flex-end;
   z-index: 3;
 
+  &__viewing-mode {
+    @media only screen and (max-width: $bp-large) {
+      
+    }
+  }
+
+  &__filter {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid red;
+
+    p {
+      font-size: 1.2rem;
+      font-weight: 600;
+      text-transform: uppercase;
+    }
+  }
+
   @media only screen and (max-width: $bp-large) {
-    right: 8rem;
+    right: 4rem;
   }
 
   @media only screen and (max-width: $bp-medium) {
@@ -31,8 +49,9 @@
   justify-content: center;
   max-width: 98rem;
   margin: 0 auto;
-  padding: 6rem 4px $xl-size;
+  padding: 10rem 4px;
   font-size: 1.4rem;
+  color: $color-primary;
 
   @media only screen and (max-width: $bp-medium) {
     padding-top: 12rem;
@@ -44,32 +63,37 @@
   left: 50%;
   transform: translateX(-50%);
   width: 97.2rem;
-  height: 16rem;
+  height: 20rem;
   margin-top: -4rem;
-  padding: 3rem 0 0 3rem;
+  padding: 2rem 0 0 3rem;
   font-size: 1.2rem;
-  font-weight: 700;
+  font-weight: 600;
   color: $color-primary;
   text-transform: uppercase;
-  letter-spacing: 3px;
+  letter-spacing: 5px;
   background-color: #fff;
   box-shadow: 0.3rem 0.4rem 2.4rem -0.5rem rgba(0, 0, 0, 0.1);
 
   @media only screen and (max-width: $bp-large) {
     width: 100vw;
-    padding: 3rem 0 0 8rem;
   }
 
   @media only screen and (max-width: $bp-medium) {
-    height: 27.4rem;
+    height: 30rem;
     padding: 3rem 0;
     text-align: center;
   }
 }
 
 .grid-icon {
-  width: 6rem;
-  margin-left: 10rem;
+  // max-width: 10rem;
+  margin-right: 10rem;
+  
+  p {
+    font-size: 1.2rem;
+    font-weight: 600;
+    text-transform: uppercase;
+  }
 
   &--equal,
   &--unequal {
@@ -247,7 +271,7 @@
 .dropdown.area-dropdown,
 .dropdown.sort-dropdown {
   width: 7rem;
-  margin-left: 1rem;
+  margin-right: 1rem;
   font-size: 1.4rem;
   font-weight: 300;
 
@@ -272,6 +296,10 @@
   @media only screen and (max-width: $bp-smallest) {
     margin: 0;
   }
+}
+
+.dropdown.sort-dropdown {
+  margin-right: 0;
 }
 
 .ui.floating.dropdown .menu {
